[package]
name = "pogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"
postgres = { version = "0.19.2", features = ["with-uuid-0_8"]}
prettytable-rs = "0.8.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
uuid = "0.8.2"
